hw database(first commit)